hard-gists/5623772/run.log
=== Docker Run Log for 5623772 ===
Started at: Mi 29. Okt 15:47:31 CET 2025

[2025-10-29 15:47:31] START: Running container for 5623772
[2025-10-29 15:47:31] SUCCESS: Container 230e8d9ccad3e54204118ffb3ccdfddee179539b1d125fad7f200b367f617275 started for 5623772
=== Container logs for 5623772 ===
  File "/snippet.py", line 23
    print nearest[0].distance
    ^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 5623772 ===
[2025-10-29 15:47:33] INFO: Container 230e8d9ccad3e54204118ffb3ccdfddee179539b1d125fad7f200b367f617275 has stopped
